#[workspace]
#members = [
#    "rts"
#]

[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.1"
#pest = "2.6"
#pest_derive = "2.6"
#nom = "7.1.3"
unicode-segmentation = "1.10.1"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
clap = { version = "4.4.8", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
either = "1.9.0"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.0"




[dev-dependencies]
rand = "0.8.5"

[profile.dev]
incremental = true

# sped
[profile.release]
lto = "fat"
split-debuginfo = "packed"
strip = "debuginfo"
incremental = false
codegen-units = 1

# tiny binary
[profile.small-bin]
inherits = "release"
panic = "abort"
strip = true
debug = 0
opt-level = "s"
